OrGate benchmark/tune.